--- a/Les_transparent/python05.tex
+++ b/Les_transparent/python05.tex
@@ -1,7 +1,7 @@
 \makeatletter\def\input@path{{images/}{styles/}{corps/}{bib/}}\makeatother
 
 \documentclass{transp_java}
-
+\usepackage{etex}
 \title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- R\'ecursivit\'e -}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
@@ -51,6 +51,7 @@
 
 %%%
 \input{recursivite}
+\input{horloge}
 
 \end{document}
 
