--- a/Les_transparent/python06_fichier.tex
+++ b/Les_transparent/python06_fichier.tex
@@ -1,11 +1,11 @@
 \makeatletter\def\input@path{{images/}{styles/}{corps/}{bib/}}\makeatother
 
 \documentclass{transp_java}
-
+\usepackage{etex}
 \title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- Fichiers et exception}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2015/2016}
+\date{}
 \institute{ENSTA Bretagne}
 
 
@@ -51,7 +51,7 @@
 
 %%%
 \input{fichier}
-
+\input{horloge}
 \end{document}
 
 
