--- a/Les_transparent/python05.tex
+++ b/Les_transparent/python05.tex
@@ -5,7 +5,7 @@
 \title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- R\'ecursivit\'e -}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2015/2016}
+\date{}
 \institute{ENSTA Bretagne}
 
 
