modification pour les cours uv 1.1 2016

--- a/Les_transparent/Python7_TAD.tex
+++ b/Les_transparent/Python7_TAD.tex
@@ -5,7 +5,7 @@
 \title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- Type Abstrait de Données (TAD) -}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2015/2016}
+\date{2016/2017}
 \institute{ENSTA Bretagne}
 
 
@@ -49,7 +49,7 @@
 \newcommand{\twound}{\rule{2\dunder}{0.4pt}}
 %%%
 \input{tad}
-
+\input{horloge}
 \end{document}
 
 
